<resources>
    <string name="app_name">Practica5</string>
    <string name="Anyadir">Añadir</string>
    <string name="ordenar">a>z</string>
    <string name="ordenarPor">Ordenar por: </string>
    <string name="acercadeTitulo">Acerca de</string>
    <string name="acercadeMensaje">"Práctica 5 &#10;""Manuel Martínez Serrano &#10;""Licencia cc (Creative Commons)"</string>
    <string name="tmMensajeERROR">NO HACE NADA :)</string>
    <string name="btBorrar">Borrar</string>
    <string name="resumen">Resumen</string>
    <string name="valoracion">Valoración: </string>
    <string name="fecha">Fecha</string>
    <string name="valorarVida">Valorar Vida</string>
    <string name="mostrarDesdeHasta">Mostrar desde hasta</string>
    <string name="opciones">Opciones </string>
    <string name="resumenbreve">Resumen breve del día</string>
    <string name="cuenta">Cuenta a tu diario tu día ...</string>
    <string name="tmMensajeBorrar">Se ha borrado la entrada al diario</string>
    <string name="vacio" />
    <string name="tituloError">Error</string>
    <string name="mensajeErrorCamposIncompletos">Todos los campos deben de estar completos</string>
    <string name="TituloValorarVida">Valoración Vida</string>
    <string name="mensajeValoraVida">Tu media de valoración es de:</string>
    <string name="tvValoracionEdicionDia">Valora tu vida</string>
    <string name="TituloEDA">Entrada a la Agenda</string>
    <string name="ordenarPorFecha">Ordenar por fecha </string>
    <string name="ordenarPorResumen">Ordenar por Resumen </string>
    <string name="ordenarPorValoracion">Ordenar por Valoración </string>

    <string name="errorLeerBD">Problema al leer en la base de datos</string>
    <string name="miDiario">Mi Diario</string>

    <string name="tituloBorrar">Aviso va a Borrar</string>
    <string name="cuerpoBorrar">Está seguro que desea eliminar la página del diario</string>

    <string name="diarioDe">"P5-El diario de "</string>


</resources>