<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/btAnyadir"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="1"
        android:title="@string/Anyadir"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/btOrdenar"
        android:orderInCategory="3"
        android:title="@string/ordenar"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btAcercade"
        android:orderInCategory="7"
        android:title="@string/acercadeTitulo"
        android:visible="true"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/btValorarVida"
        android:orderInCategory="4"
        android:title="@string/valorarVida" />
    <item
        android:id="@+id/btBorrar"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="2"
        android:title="@string/btBorrar"
        app:showAsAction="always" />
    <item
        android:id="@+id/btMostrarDesdeHasta"
        android:orderInCategory="5"
        android:title="@string/mostrarDesdeHasta" />
    <item
        android:id="@+id/btOpciones"
        android:orderInCategory="6"
        android:title="@string/opciones" />
</menu>