<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clEdicionActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EdicionDiaActivity">

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btFecha"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintStart_toEndOf="@+id/etFecha"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etResumenBreve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/resumenbreve"
        android:inputType="textPersonName"
        android:maxLength="@integer/maxLongitud"
        android:maxLines="@integer/maxLineas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImagenEA" />

    <TextView
        android:id="@+id/tvValorarVida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/valorarVida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etResumenBreve" />

    <Spinner
        android:id="@+id/spValorarVida"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:entries="@array/valores"
        android:gravity="center_horizontal"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvValorarVida"
        app:layout_constraintTop_toBottomOf="@id/etResumenBreve" />

    <ScrollView
        android:id="@+id/swResumen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spValorarVida"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etResumenGeneral"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorEditText"
                android:ems="10"
                android:gravity="fill_horizontal"
                android:hint="@string/cuenta"
                android:inputType="textMultiLine"
                android:lines="50"
                android:maxLines="30"
                android:minLines="2"
                android:scrollbars="vertical"
                android:textIsSelectable="true"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGuardar"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:backgroundTint="#E91E63"
        app:borderWidth="0.5dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:hoveredFocusedTranslationZ="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp"
        app:pressedTranslationZ="6dp"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <Button
        android:id="@+id/btImagen"
        android:layout_width="62dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/btFecha"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivImagenEA"
        android:layout_width="0dp"
        android:layout_height="109dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFecha"
        tools:srcCompat="@tools:sample/avatars[0]" />
</androidx.constraintlayout.widget.ConstraintLayout>